# pokered-save-editor-2

./: .clang-tidy  .cppcheck-suppressions  .gitignore  CLAUDE.md  Doxyfile  NewGoals.md  PokeredSaveEditor.pro  README.md  VERSION  VERSION.txt  _runci.bat  qml.qrc  qtquickcontrols2.conf  version-notes.md
projects/: CMakeLists.txt  PokeredSaveEditor.pro
projects/app/: CMakeLists.txt  app.pro  app.qrc  pse_app.rc.in  qml.qrc
projects/app/assets/data/: credits.json  events.json  items.json  missables.json  moves.json  music.json  namesPokemon.json  playerExamples.json  pokemon.json  starters.json  types.json
projects/app/assets/tilesets/: project.xcf
projects/app/assets/wallpaper/: README.md
projects/app/shaders/: pixelart.frag
projects/app/src/: main.cpp
projects/app/src/boot/: boot.cpp  bootDatabase.cpp  bootQmlLinkage.cpp  debuglaunch.cpp  debugserver.cpp  shortcutdefs.h
projects/app/src/bridge/: bridge.cpp  bridge.h  router.cpp  router.h  settings.cpp  settings.h
projects/app/src/common/: utility.cpp
projects/app/src/engine/: fontpreviewprovider.cpp  fontpreviewprovider.h  mapclock.cpp  mapclock.h  mapengine.cpp  mapengine.h  mapprovider.cpp  mapprovider.h  mapsim.cpp  mapsim.h  musicplayer.cpp  musicplayer.h  playerprovider.cpp  playerprovider.h  spriteart.h  tilesetengine.cpp  tilesetengine.h  tilesetprovider.cpp  tilesetprovider.h
projects/app/src/mvc/: creditsmodel.cpp  creditsmodel.h  fontkeyboard.cpp  fontkeyboard.h  fontsearchmodel.cpp  fontsearchmodel.h  individualmap.cpp  individualmap.h  itemexchangemodel.cpp  itemexchangemodel.h  itemmarketcartmodel.cpp  itemmarketcartmodel.h  itemmarketmodel.cpp  itemmarketmodel.h  itemmarketviewmodel.cpp  itemmarketviewmodel.h  itemoverviewmodel.cpp  itemoverviewmodel.h  itemselectmodel.cpp  itemselectmodel.h  itemstoragemodel.cpp  itemstoragemodel.h  maplayersmodel.cpp  maplayersmodel.h  mapmodel.cpp  mapmodel.h  mapmodel_states.cpp  mapselectmodel.cpp  mapselectmodel.h  moveselectmodel.cpp  moveselectmodel.h  natureselectmodel.cpp  natureselectmodel.h  pokedexmodel.cpp  pokedexmodel.h  pokemonboxselectmodel.cpp  pokemonboxselectmodel.h  pokemonoverviewmodel.cpp  pokemonoverviewmodel.h  pokemonstartersmodel.cpp  (+11 more)
projects/app/translations/: pse_en.ts
projects/app/ui/app/: App.qml
projects/app/ui/window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
projects/audio/: CMakeLists.txt
projects/audio/src/pse-audio/: audio_autoport.h  gbapu.cpp  gbapu.h  gen1musicasm.cpp  gen1musicasm.h  gen1soundengine.cpp  gen1soundengine.h
projects/cmake/: PSEVersion.cmake  PSEVersionGen.cmake  pse_version.h.in
projects/common/: CMakeLists.txt  common.pro
projects/common/src/pse-common/: common.cpp  common.h  common_autoport.h  random.cpp  random.h  types.h  utility.cpp  utility.h
projects/core/: core.pro
projects/core/src/pse-core/: core_autoport.h
projects/db/: CMakeLists.txt  db.cpp  db.h  db.pro  db.qrc
projects/db/assets/blocks/: README.md
projects/db/assets/data/: credits.json  credits.md  events.json  fly.json  font.json  gameCorner.json  hiddenCoins.json  hiddenItems.json  items.json  maps.json  missables.json  scripts.json  sprites.json  tileTraits.json  tileset.json  trades.json
projects/db/src/pse-db/: abstracthiddenitemdb.cpp  abstracthiddenitemdb.h  blocksdb.cpp  blocksdb.h  credits.cpp  credits.h  creditsdb.cpp  creditsdb.h  db.cpp  db.h  db_autoport.h  eventpokemon.cpp  eventpokemon.h  eventpokemondb.cpp  eventpokemondb.h  events.cpp  events.h  eventsdb.cpp  eventsdb.h  examples.cpp  examples.h  examplesplayer.cpp  examplesplayer.h  examplespokemon.cpp  examplespokemon.h  examplesrival.cpp  examplesrival.h  fly.cpp  fly.h  flydb.cpp  flydb.h  fonts.cpp  fonts.h  fontsdb.cpp  fontsdb.h  fontsearch.h  gamecorner.cpp  gamecorner.h  gamecornerdb.cpp  gamecornerdb.h  (+55 more)
projects/savefile/: CMakeLists.txt  savefile.pro
projects/tests/: CMakeLists.txt
projects/tests/audio/: tst_audio.cpp  tst_music_asm.cpp
projects/tests/common/: tst_common.cpp  tst_common_qml.cpp  tst_common_random.cpp
projects/tests/db/: tst_db_coverage_fill.cpp  tst_db_entries.cpp  tst_db_entry_getters.cpp  tst_db_entry_getters2.cpp  tst_db_integrity.cpp  tst_db_map_subentries.cpp  tst_db_random_strings.cpp  tst_db_stores.cpp  tst_fonts.cpp  tst_fontsdb.cpp  tst_fontsearch.cpp  tst_mapsearch.cpp  tst_mapsearch_predicates.cpp  tst_tile_traits.cpp
projects/tests/emu/: tst_emu_parity.cpp  tst_flag_scenarios.cpp  tst_sound_parity.cpp
projects/tests/gui/: tst_acceptance.cpp  tst_gui_drag.cpp  tst_gui_fidelity.cpp  tst_gui_input.cpp  tst_gui_moves.cpp  tst_gui_navigation.cpp  tst_gui_saveload.cpp  tst_visual_regression.cpp
projects/tests/helpers/: emuvenv.h  guiapp.h  savefilefixture.h
projects/tests/mvc/: tst_app_e2e.cpp  tst_area_state.cpp  tst_bridge.cpp  tst_connections.cpp  tst_engine_providers.cpp  tst_font_keyboard.cpp  tst_item_exchange.cpp  tst_item_storage_model.cpp  tst_map.cpp  tst_map_animation.cpp  tst_map_layers.cpp  tst_map_sprites.cpp  tst_map_states.cpp  tst_market_model.cpp  tst_model_tester.cpp  tst_models.cpp  tst_move_select_model.cpp  tst_player.cpp  tst_select_models.cpp  tst_shortcuts.cpp  tst_signs.cpp  tst_storage_model.cpp  tst_tileset_engine.cpp  tst_warps.cpp
projects/tests/qml/: main.cpp  main_brg.cpp  tst_qml_screens.cpp
projects/tests/savefile/: tst_area.cpp  tst_area_fragments.cpp  tst_area_logic.cpp  tst_area_npc.cpp  tst_area_pokemon.cpp  tst_bench.cpp  tst_dirty_fixtures.cpp  tst_e2e.cpp  tst_errors.cpp  tst_fields.cpp  tst_filemanagement.cpp  tst_fuzz.cpp  tst_item.cpp  tst_items.cpp  tst_items_logic.cpp  tst_iterator.cpp  tst_map_fragments.cpp  tst_misc_regions.cpp  tst_player_basics.cpp  tst_pokedex.cpp  tst_pokemon.cpp  tst_pokemon_logic.cpp  tst_pokemonbox.cpp  tst_randomizer.cpp  tst_regression.cpp  tst_roundtrip.cpp  tst_sign_data.cpp  tst_signals.cpp  tst_sprite_data.cpp  tst_sprite_set.cpp  tst_storage.cpp  tst_synthetic_fixtures.cpp  tst_toolset.cpp  tst_verbs.cpp  tst_world.cpp
projects/tests/tools/: gen_synthetic_fixtures.cpp  screenshooter.cpp
(+1301 files in other folders)
